--- a/View/indexmedico.html
+++ b/View/indexmedico.html
@@ -26,6 +26,7 @@
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
         <link href="casimedico.css" rel="stylesheet">
+        <link href="font.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
