--- a/View/indexpaziente.html
+++ b/View/indexpaziente.html
@@ -27,6 +27,7 @@
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
 
         <link href="casipaziente.css" rel="stylesheet">
+        <link href="font.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
@@ -63,22 +64,10 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="visualizzaesamiprenotati_paziente.html">Visualizza Esami Prenotati</a>
                             </li>
 
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#timeline">Timeline</a>
-                            </li>-->
-
                             <div class="navbar-brand d-none d-lg-block">
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
                             </div>
-
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#reviews">Testimonials</a>
-                            </li>-->
-
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#booking">Booking</a>
-                            </li>-->
 
                             <li class="nav-item">
                                 <a class="nav-link" href="visualizzastoricoesami.html">Visualizza Storico Esami</a>
