--- a/View/login.html
+++ b/View/login.html
@@ -4,6 +4,7 @@
         <title>ACCESSO</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
         <link rel="stylesheet" href="logregstyle.css">
+        <link href="font.css" rel="stylesheet">
     </head>
     <body>
         <form method="post" action="login.php">
