--- a/View/loginadmin.html
+++ b/View/loginadmin.html
@@ -7,7 +7,7 @@
         <link href="font.css" rel="stylesheet">
     </head>
     <body>
-        <form method="post" action="loginmedico.php">
+        <form method="post" action="loginadmin.php">
             <h1>ACCESSO</h1>
             <input type="text" id="email" placeholder="Email" name="email">
             <input type="password" id="Password" placeholder="Password" name="password">
