--- a/View/prenotaesame.html
+++ b/View/prenotaesame.html
@@ -29,6 +29,7 @@
     <link href="css/templatemo-medic-care.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="casipaziente.css">
+    <link href="font.css" rel="stylesheet">
 <!--
     <link rel="stylesheet" href="prenotaesame.css" />
     
