--- a/View/visualizzaesamiprenotati.html
+++ b/View/visualizzaesamiprenotati.html
@@ -27,7 +27,7 @@
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
 
         <link rel="stylesheet" href="casipaziente.css">
-
+        <link href="font.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
