--- a/View/index.html
+++ b/View/index.html
@@ -25,6 +25,7 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
+        <link href="font.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
@@ -85,7 +86,7 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="register.html">Registrati</a>
                             </li>
                             <li class="nav-item" >
-                                <a class="nav-link" href="login.html">Accedi</a>
+                                <a class="nav-link" href="sceltalogin.html">Accedi</a>
                             </li>
                         </ul>
                     </div>
