--- a/View/indexadmin.html
+++ b/View/indexadmin.html
@@ -25,6 +25,9 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
+
+        <link href="font.css" rel="stylesheet">
+        <link href="font.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
@@ -58,7 +61,7 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="moderazioneaccount.html">Visualizza medici e pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#about">Visualizza appuntamenti</a>
+                                <a class="nav-link" href="visualizzaappuntamenti_admin.html">Visualizza appuntamenti</a>
                             </li>
 
                             <!--<li class="nav-item">
@@ -79,10 +82,10 @@ https://templatemo.com/tm-566-medic-care
                             </li>-->
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#contact">Visualizza esami</a>
+                                <a class="nav-link" href="visualizzaesami_admin.html">Visualizza esami</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#contact">Visualizza recensioni</a>
+                                <a class="nav-link" href="visualizzarecensioni_admin.html">Visualizza recensioni</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="profiloadmin.php">Profilo Personale</a>
