--- a/View/register.html
+++ b/View/register.html
@@ -4,6 +4,7 @@
         <title>REGISTRAZIONE</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
         <link rel="stylesheet" href="logregstyle.css">
+        <link href="font.css" rel="stylesheet">
     </head>
     <body>
         <form method="post" action="register.php">
