--- a/View/registeradmin.html
+++ b/View/registeradmin.html
@@ -7,14 +7,13 @@
         <link href="font.css" rel="stylesheet">
     </head>
     <body>
-        <form method="post" action="registermedico.php">
+        <form method="post" action="registeradmin.php">
             <h1>REGISTRAZIONE</h1>
             <input type="text" id="nome" placeholder="Nome" name="nome" required>
             <input type="text" id="cognome" placeholder="Cognome" name="cognome" required>
             <input type="text" id="email" placeholder="E-mail" name="email" required>
-            <input type="text" id="costo" placeholder="Costo" name="costo" required>
             <input type="password" id="password" placeholder="Password" name="password" required>
-            <input type="file" id="imgprofilo" placeholder="Immagine Profilo" name="imgprofilo" >
+            <!--<input type="file" id="imgprofilo" placeholder="Immagine Profilo" name="imgprofilo" >-->
             <button type="submit" name="register">REGISTRATI</button>
         </form>
     </body>
