--- a/View/storicoesami_perappuntamento.html
+++ b/View/storicoesami_perappuntamento.html
@@ -27,6 +27,7 @@
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
 
         <link href="casimedico.css" rel="stylesheet">
+        <link href="font.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
