--- a/View/visualizzastoricoesami_medico.html
+++ b/View/visualizzastoricoesami_medico.html
@@ -25,9 +25,6 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
-
-        <link href="casimedico.css" rel="stylesheet">
-        <link href="font.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
@@ -58,14 +55,14 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="indexmedico.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="storicoesami_perappuntamento.html">Storico esami</a>
+                                <a class="nav-link" href="visualizzastoricoesami_medico.html">Storico esami</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="visualizzaagenda.html">Visualizza agenda</a>
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="inseriscislotorario.html">Carica slot per appuntamento</a>
+                                <a class="nav-link" href="#timeline">Carica slot per appuntamento</a>
                             </li>
 
                             <div class="navbar-brand d-none d-lg-block">
@@ -76,6 +73,7 @@ https://templatemo.com/tm-566-medic-care
                             <!--<li class="nav-item">
                                 <a class="nav-link" href="#reviews">Testimonials</a>
                             </li>-->
+
                             <li class="nav-item">
                                 <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
                             </li>
@@ -83,10 +81,10 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="storicoesami_perpaziente.html">Ricerca pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzarecensioni_medico.html">Recensioni</a>
+                                <a class="nav-link" href="#booking">Recensioni</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="profilomedico.php">Profilo Personale</a>
+                                <a class="nav-link" href="profiloadmin.php">Profilo Personale</a>
                             </li>
                             <!--<li class="nav-item" >
                                 <a class="nav-link" href="register.html">REGISTRATI</a>
@@ -107,13 +105,18 @@ https://templatemo.com/tm-566-medic-care
                 <div class="col">
                     <form action="#">
                         <div class="form-group" >
-                            <!--<h3><label for="categ">Tipologia</label></h3>-->
+                            <!--<h3><label for="categ">Tipologia</label></h3>
                             <select name="languages" id="categ" class="form-select">
-                                <option value="select">Ordina per</option>
-                                <option value="dentista">Nome</option>
-                                <option value="oculista">Cognome</option>
-                                <option value="otorino">Data appuntamento</option>
-                            </select>
+                                <option value="select">Seleziona una tipologia</option>
+                                <option value="dentista">dentista</option>
+                                <option value="oculista">oculista</option>
+                                <option value="otorino">otorino</option>
+                                <option value="cardiologo">cardiologo</option>
+                                <option value="radiologo">radiologo</option>
+                                <option value="neurologo">neurologo</option>
+                                <option value="urologo">urologo</option>
+                                <option value="neurofisiopatologo">neurofisiopatologo</option>
+                            </select>-->
                         </div>
                             <br>
                                 <div>
@@ -121,7 +124,7 @@ https://templatemo.com/tm-566-medic-care
                                     </input>
                                     </div>
                                     <br>
-                            <button type="submit" class="btn btn-primary">Effettua ricerca</button>
+                            <button type="submit" class="btn btn-primary">Effettua Ricerca</button>
                     </form>
                 </div>
             </div>
@@ -133,7 +136,8 @@ https://templatemo.com/tm-566-medic-care
                         <th scope="col">Nome Paziente</th>
                         <th scope="col">Cognome Paziente</th>
                         <th scope="col">Data</th>
-                        <th scope="col">Valutazione</th>
+                        <th scope="col">Ora</th>
+                        <th scope="col">Tipologia</th>
                         <th scope="col">Azioni</th>
                     </tr>
                 </thead>
@@ -142,22 +146,27 @@ https://templatemo.com/tm-566-medic-care
                         <td>Giacomo</td>
                         <td>Giannini</td>
                         <td>24/05/2024</td>
-                        <td>3/5</td>
-                        <td><a href="rispostarecensione.html"><button class="btn btn-primary">Dettagli</button></a></td>
+                        <td>10:00</td>
+                        <td>Urologia</td>
+                        <td><button class="btn btn-primary">Carica Referto</button></td>
                     </tr>
                     <tr>
                         <td>Piero</td>
                         <td>Marcozzi</td>
                         <td>01/01/2024</td>
-                        <td>4/5</td>
-                        <td><a href="rispostarecensione.html"><button class="btn btn-primary">Dettagli</button></a></td>
+                        <td>08:30</td>
+                        <td>Neurologia</td>
+                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
+                        <td><button class="btn btn-primary">Cancella Referto</button></td>
                     </tr>
                     <tr>
                         <td>Elisabetta</td>
                         <td>Mecozzi</td>
                         <td>05/03/2024</td>
-                        <td>1/5</td>
-                        <td><a href="rispostarecensione.html"><button class="btn btn-primary">Dettagli</button></a></td>
+                        <td>11:20</td>
+                        <td>Cardiologia</td>
+                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
+                        <td><button class="btn btn-primary">Elimina Referto</button></td>
                     </tr>
                 </tbody>
             </table>
