ritocchi grafici medico

--- a/View/indexmedico.html
+++ b/View/indexmedico.html
@@ -56,10 +56,8 @@ https://templatemo.com/tm-566-medic-care
                             <li class="nav-item active">
                                 <a class="nav-link" href="indexmedico.html">Home</a>
                             </li>
-                            <li class="nav-item active">
+                            <li class="nav-item active"><!-- serve per caricamento referto (devo cambiare nome)-->
                                 <a class="nav-link" href="storicoesami_perappuntamento.html">Storico esami</a>
-                                
-
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="visualizzaagenda.html">Visualizza agenda</a>
