--- a/View/inseriscireferto.html
+++ b/View/inseriscireferto.html
@@ -72,10 +72,6 @@ https://templatemo.com/tm-566-medic-care
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
                             </div>
-
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#reviews">Testimonials</a>
-                            </li>-->
                             <li class="nav-item">
                                 <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
                             </li>
@@ -88,12 +84,6 @@ https://templatemo.com/tm-566-medic-care
                             <li class="nav-item">
                                 <a class="nav-link" href="profilomedico.php">Profilo Personale</a>
                             </li>
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="register.html">REGISTRATI</a>
-                            </li>-->
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="login.html">ACCEDI</a>
-                            </li>-->
                         </ul>
                     </div>
 
@@ -105,22 +95,26 @@ https://templatemo.com/tm-566-medic-care
             <div class="row">
                 <div class="col">
                     <br>
-                    <h2>Medico : Emanuele Papile</h2>
+                    <h1>Caricamento Referto</h1>
+                    <br>
+                    <h2>Esame di Giacomo Giannini</h2>
                     <br>
                     <h2>Categoria : Neurologia &ensp;&ensp;&ensp;&ensp;Costo: 70€</h2>
                     <br>
                     <h2>Data : 01/06/2024 &ensp;&ensp;&ensp;&ensp; Ora: 11:30</h2>
-                    <br>
+                    <br><br>
                     <form action="#">
                         <div class="form-group"></div>
                             <label for="oggetto">Oggetto Referto: </label>
                             <input id="oggetto" name="oggetto" placeholder="Oggetto" style="width: 800px;height: 35px;">
-                            <br><br><label for="contenuto">Contenuto Referto:</label>
+                            <br><br><br><label for="contenuto">Contenuto Referto:</label>
                             <input id="contenuto" name="contenuto" placeholder="Scrivi qua" style="width: 800px;height: 170px;">
-                            <br><br>
-                            <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
-                            &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-                            <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
+                            <br><br><br><br>
+                            <div style="position: absolute;left: 550px;">
+                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
+                                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
+                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
+                                </div>
                         </div>
                     </form>
                 </div>
