--- a/View/casimedico.css
+++ b/View/casimedico.css
@@ -39,21 +39,7 @@ h4, label {
     padding: 4px;
     border-radius: 9px;
   } */
-  table {
-    margin: 0 auto;
-    border-collapse: collapse;
-    }
-    th, td {
-        text-align: center ;
-        padding: 8px;
-    }
-    label{
-        font-size: xx-large;
-        font-weight: bold;
-    }
-    #orari{
-        border: 1px solid;
-    }
-    th{
-        border: 1px solid;
-    }
+thead{
+    text-align: center;
+}
+    
