--- a/View/modificaappuntamento.html
+++ b/View/modificaappuntamento.html
@@ -9,7 +9,9 @@
 
         <title>Ambula Care</title>
 
-        <!-- CSS FILES -->        
+        <!-- CSS FILES -->
+        <link href="casimedico.css" rel="stylesheet">
+        <link href="font.css" rel="stylesheet">      
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,8 +27,6 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
-        <link href="casimedico.css" rel="stylesheet">
-        <link href="font.css" rel="stylesheet">
 
 <!--
 
@@ -72,10 +72,6 @@ https://templatemo.com/tm-566-medic-care
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
                             </div>
-
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#reviews">Testimonials</a>
-                            </li>-->
                             <li class="nav-item">
                                 <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
                             </li>
@@ -88,12 +84,6 @@ https://templatemo.com/tm-566-medic-care
                             <li class="nav-item">
                                 <a class="nav-link" href="profilomedico.phpp">Profilo Personale</a>
                             </li>
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="register.html">REGISTRATI</a>
-                            </li>-->
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="login.html">ACCEDI</a>
-                            </li>-->
                         </ul>
                     </div>
 
@@ -104,12 +94,14 @@ https://templatemo.com/tm-566-medic-care
         <div class="container">
             <div class="row">
                 <div class="col">
+                    <br>
+                    <h1>Modifica Appuntamento</h1>
                     <br><br>
                     <h2>Paziente : Giacomo Giannini</h2>
                     <h2>Medico : Dott. Emanuele Papile</h2>
                     <h2>Esame : Visita Neurologica</h2>
                     <h2>Costo: 70€</h2>
-                    <br><br><br>
+                    <br><br>
                     <form action="#">
                         <div class="form-group"></div>
                             <label for="vecchiadata">Vecchia Data Appuntamento : 01/06/2024</label>
@@ -121,10 +113,12 @@ https://templatemo.com/tm-566-medic-care
                             <br>
                             <label for="nuovadata">Nuova Ora Appuntamento: </label>
                             <input type="time" id="datanuova" name="datanuova" style="width: 170px;height: 35px;" />
-                            <br><br><br><br><br><br>
-                            <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
-                            &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-                            <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
+                            <br><br><br><br><br>
+                            <div style="position: absolute;left: 550px;">
+                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
+                                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
+                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
+                                </div>
                         </div>
                     </form>
                     
