--- a/View/storicoesami_perpaziente.html
+++ b/View/storicoesami_perpaziente.html
@@ -9,7 +9,9 @@
 
         <title>Ambula Care</title>
 
-        <!-- CSS FILES -->        
+        <!-- CSS FILES -->
+        <link href="casimedico.css" rel="stylesheet">
+        <link href="font.css" rel="stylesheet">     
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,9 +27,6 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
-
-        <link href="casimedico.css" rel="stylesheet">
-        <link href="font.css" rel="stylesheet">
 <!--
 
 TemplateMo 566 Medic Care
@@ -72,10 +71,6 @@ https://templatemo.com/tm-566-medic-care
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
                             </div>
-
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#reviews">Testimonials</a>
-                            </li>-->
                             <li class="nav-item">
                                 <a class="nav-link" href="inseriscidata_perstatistiche.html">Statistiche</a>
                             </li>
@@ -88,12 +83,6 @@ https://templatemo.com/tm-566-medic-care
                             <li class="nav-item">
                                 <a class="nav-link" href="profilomedico.php">Profilo Personale</a>
                             </li>
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="register.html">REGISTRATI</a>
-                            </li>-->
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="login.html">ACCEDI</a>
-                            </li>-->
                         </ul>
                     </div>
 
@@ -107,16 +96,16 @@ https://templatemo.com/tm-566-medic-care
                 <div class="col">
                     <form action="#">
                         <div class="form-group" >
-                            <input type="text" id="nomeutente" placeholder="Nome Utente" name="nomeutente" required>
-                            </input>
+                        <h2>Ricerca Pazienti</h2>
+                        <br>
+                            <input type="text" id="nomepaziente" placeholder="Nome Paziente" name="nomepaziente" required>
                             <br><br>
-                            <input type="text" id="cognomeutente" placeholder="Cognome Utente" name="cognomeutente" required>
-                            </input>
+                            <input type="text" id="cognomepaziente" placeholder="Cognome Paziente" name="cognomepaziente" required>
                             </div>
                             
                         <br>
                         <div>
-                            <select name="languages" id="ordina" class="form-select">
+                            <select name="ordina" id="ordina" class="form-select">
                                 <option value="select">Ordina per cognome o nome</option>
                                 <option value="nome">Nome</option>
                                 <option value="cognome">Cognome</option>
@@ -128,9 +117,10 @@ https://templatemo.com/tm-566-medic-care
                 </div>
             </div>
         </div>
-        <div class="col-9" id="elenco">
+        <br><br>
+        <div class="col-9" id="elenco" style="position: absolute;left: 180px;">
             <table class="table">
-                <thead>
+                <thead style="text-align: center;">
                     <tr>
                         <th scope="col">Nome Paziente</th>
                         <th scope="col">Cognome Paziente</th>
