--- a/View/modificaappuntamento_admin.html
+++ b/View/modificaappuntamento_admin.html
@@ -10,7 +10,6 @@
         <title>Ambula Care</title>
 
         <!-- CSS FILES -->     
-
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,10 +25,8 @@
         <link href="css/owl.theme.default.min.css" rel="stylesheet">
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
-
-        <link href="casipaziente.css" rel="stylesheet">
-
-        <link href="font.css" rel="stylesheet">
+        <link href="casimedico.css" rel="stylesheet">
+        <link href="font.css" rel="stylesheet"> 
 
 <!--
 
@@ -44,46 +41,50 @@ https://templatemo.com/tm-566-medic-care
     
         <main>
 
-            <nav class="navbar navbar-expand-lg mx-auto bg-light fixed-top shadow-lg">
+            <nav class="navbar navbar-expand-lg bg-light fixed-top shadow-lg">
                 <div class="container">
                     <div class="navbar-brand mx-auto d-lg-none">
                         AmbulaCare
                         <strong class="d-block">HEALTH SPECIALISTS</strong>
                     </div>
-    
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-    
+
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="indexpaziente.html">Home</a>
+                                <a class="nav-link" href="indexadmin.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="visualizzaesami_prenotazione.html">Prenota esame</a>
+                                <a class="nav-link" href="moderazioneaccount.html">Visualizza medici e pazienti</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzaesamiprenotati.html">Visualizza Esami Prenotati</a>
+                                <a class="nav-link" href="visualizzaappuntamenti_admin.html">Visualizza appuntamenti</a>
                             </li>
-                            <li class="navbar-brand d-lg-block">
+                            <div class="navbar-brand d-none d-lg-block">
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
+                            </div>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="visualizzaesami_admin.html">Visualizza esami</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzastoricoesami">Visualizza Storico Esami</a>
+                                <a class="nav-link" href="visualizzarecensioni_admin.html">Visualizza recensioni</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="profilopaziente.php">Profilo Personale</a>
+                                <a class="nav-link" href="profiloadmin.php">Profilo Personale</a>
                             </li>
                         </ul>
                     </div>
+
                 </div>
             </nav>
 
         </main>
-        <br>
+        <br><br>
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -92,7 +93,7 @@ https://templatemo.com/tm-566-medic-care
                             <div class="col-9" id="elenco">
                                 <h2>Esame: Visita Cardiologica&ensp;&ensp;&ensp;&ensp;Costo: 70€</h2>
                                 <h2>Medico: Emanuele Papile&ensp;&ensp;&ensp;Data Odierna: 02/06/24</h2>
-                                <h2>5/5&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Disponibilità Orari del Medico</h2>
+                                <h2>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;Disponibilità Orari del Medico</h2>
                                 <div>
                                     <button><</button>
                                     <button style="position: absolute;left: 1055px;">></button>
@@ -161,8 +162,8 @@ https://templatemo.com/tm-566-medic-care
                                 </table>
                                 <br>
                                 <div>
-                                    <h4><label>Data Appuntamento:</label><input type="date" id="dataapp" placeholder="Data Appuntamento" name="datadisp" /></h4>
-                                    <h4><label>Ora Appuntamento : </label><input type="time" id="oraapp" placeholder="Ora Appuntamento" name="oraapp" /></h4>
+                                    <h4><label>Nuova Data :</label><input type="date" id="nuovadata" placeholder="Nuova Data" name="nuovadata" />&ensp;&ensp;&ensp;&ensp;&ensp;<label>Vecchia Data: 07/06/24</label></h4>
+                                    <h4><label>Nuovo Orario : </label><input type="time" id="nuovoorario" placeholder="Nuovo Orario" name="nuovoorario" />&ensp;&ensp;&ensp;&ensp;&ensp;<label>Vecchio Orario: 11:30</label></h4>
                                     </div>
                             </div>
                         </div>
@@ -176,6 +177,7 @@ https://templatemo.com/tm-566-medic-care
                 </div>
             </div>
         </div>
+                    
        <!--<footer class="site-footer section-padding" id="contact">
             <div class="container">
                 <div class="row">
