--- a/View/riepilogoappuntamento.html
+++ b/View/riepilogoappuntamento.html
@@ -26,10 +26,8 @@
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
 
-        <link rel="stylesheet" href="casiadmin.css">
-
+        <link href="casipaziente.css" rel="stylesheet">
         <link href="font.css" rel="stylesheet">
-
 <!--
 
 TemplateMo 566 Medic Care
@@ -43,120 +41,71 @@ https://templatemo.com/tm-566-medic-care
     
         <main>
 
-            <nav class="navbar navbar-expand-lg bg-light fixed-top shadow-lg">
+            <nav class="navbar navbar-expand-lg mx-auto bg-light fixed-top shadow-lg">
                 <div class="container">
                     <div class="navbar-brand mx-auto d-lg-none">
                         AmbulaCare
                         <strong class="d-block">HEALTH SPECIALISTS</strong>
                     </div>
-
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-
+    
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="indexadmin.html">Home</a>
+                                <a class="nav-link" href="indexpaziente.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="moderazioneaccount.html">Visualizza medici e pazienti</a>
+                                <a class="nav-link" href="visualizzaesami_prenotazione.html">Prenota esame</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzaappuntamenti_admin.html">Visualizza appuntamenti</a>
+                                <a class="nav-link" href="visualizzaesamiprenotati.html">Visualizza Esami Prenotati</a>
                             </li>
-                            <div class="navbar-brand d-none d-lg-block">
+                            <li class="navbar-brand d-lg-block">
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
-                            </div>
-                            <li class="nav-item">
-                                <a class="nav-link" href="visualizzaesami_admin.html">Visualizza esami</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzarecensioni_admin.html">Visualizza recensioni</a>
+                                <a class="nav-link" href="visualizzastoricoesami">Visualizza Storico Esami</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="profiloadmin.php">Profilo Personale</a>
+                                <a class="nav-link" href="profilopaziente.php">Profilo Personale</a>
                             </li>
                         </ul>
                     </div>
-
                 </div>
             </nav>
 
         </main>
+        <br>
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <form action="#">
-                        <div class="form-group" >
-                            <br><br>
-                            <h2><label>Gestione Appuntamenti</label></h2>
+                        <h1>Riepilogo Dettagli Appuntamento</h1>
+                        <br>
+                            <h2>Esame: Visita Cardiologica</h2>
                             <br>
-                            <select name="tipologia" id="categ" class="form-select">
-                                <option value="select">Seleziona una tipologia</option>
-                                <option value="dentista">dentista</option>
-                                <option value="oculista">oculista</option>
-                                <option value="otorino">otorino</option>
-                                <option value="cardiologo">cardiologo</option>
-                                <option value="radiologo">radiologo</option>
-                                <option value="neurologo">neurologo</option>
-                                <option value="urologo">urologo</option>
-                                <option value="neurofisiopatologo">neurofisiopatologo</option>
-                            </select>
+                            <h2>Medico: Emanuele Papile&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;5/5</h2>
                             <br>
-                                <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" />
-                            <br><br>
-                                <input type="time" id="oraprenotinizio" placeholder="Orario prenotazione" name="oraprenotinizio" />
-                                <input type="time" id="oraprenotfine" placeholder="Orario prenotazione" name="oraprenotfine" />
-                                <br><br>
-                            <button type="submit" class="btn btn-primary">Filtra Risultati</button>
-                        </div>
-                    </form>
+                            <h2>Costo: 70€</h2>
+                            <br>
+                            <h2>Data: 07/08/24</h2>
+                            <br>
+                            <h2>Ora: 11:30</h2>
+                            <br><br><br>
+                            <div style="position: absolute;left: 550px;">
+                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
+                                &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
+                                <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
+                            </div>
+                    
                 </div>
             </div>
         </div>
-        <br><br>
-        <div>
-            <table class="table">
-                <thead style="text-align: center;">
-                    <tr>
-                        <th scope="col">Data</th>
-                        <th scope="col">Ora</th>
-                        <th scope="col">Medico</th>
-                        <th scope="col">Tipologia</th>
-                        <th scope="col">Costo</th>
-                        <th scope="col">Azioni</th>
-                    </tr>
-                </thead>
-                <tbody style="text-align: center;">
-                    <tr>
-                        <td>01/06/2024</td>
-                        <td>10:00</td>
-                        <td>Papile</td>
-                        <td>Cardiologo</td>
-                        <td>50€</td>
-                        <td><a href="modificaappuntamento_admin.html"><button class="btn btn-primary">Modifica</button></a></td>
-                    </tr>
-                    <tr>
-                        <td>10/08/2024</td>
-                        <td>12:00</td>
-                        <td>Iannotti</td>
-                        <td>Neurologo</td>
-                        <td>80€</td>
-                        <td><a href="modificaappuntamento_admin.html"><button class="btn btn-primary">Modifica</button></a></td>
-                    </tr>
-                    <tr>
-                        <td>11/12/2024</td>
-                        <td>09:00</td>
-                        <td>Di Simone</td>
-                        <td>Oculistica</td>
-                        <td>50€</td>
-                        <td><a href="modificaappuntamento_admin.html"><button class="btn btn-primary">Modifica</button></a></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        
        <!--<footer class="site-footer section-padding" id="contact">
             <div class="container">
                 <div class="row">
