--- a/View/visualizzaesamiprenotati_profilopaziente.html
+++ b/View/visualizzaesamiprenotati_profilopaziente.html
@@ -26,10 +26,9 @@
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
 
-        <link rel="stylesheet" href="casiadmin.css">
+        <link rel="stylesheet" href="casipaziente.css">
 
         <link href="font.css" rel="stylesheet">
-
 <!--
 
 TemplateMo 566 Medic Care
@@ -57,26 +56,23 @@ https://templatemo.com/tm-566-medic-care
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="indexadmin.html">Home</a>
+                                <a class="nav-link" href="indexpaziente.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="moderazioneaccount.html">Visualizza medici e pazienti</a>
+                                <a class="nav-link" href="visualizzaesami_prenotazione.html">Prenota esame</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzaappuntamenti_admin.html">Visualizza appuntamenti</a>
+                                <a class="nav-link" href="visualizzaesamiprenotati_profilopaziente.html">Visualizza Esami Prenotati</a>
                             </li>
                             <div class="navbar-brand d-none d-lg-block">
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
                             </div>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzaesami_admin.html">Visualizza esami</a>
+                                <a class="nav-link" href="visualizzastoricoesami_profilopaziente.html">Visualizza Storico Esami</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="visualizzarecensioni_admin.html">Visualizza recensioni</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="profiloadmin.php">Profilo Personale</a>
+                                <a class="nav-link" href="profilopaziente.php">Profilo Personale</a>
                             </li>
                         </ul>
                     </div>
@@ -90,10 +86,9 @@ https://templatemo.com/tm-566-medic-care
                 <div class="col">
                     <form action="#">
                         <div class="form-group" >
-                            <br><br>
-                            <h2><label>Gestione Appuntamenti</label></h2>
+                            <h2><label for="storico">Esami Prenotati </label></h2>
                             <br>
-                            <select name="tipologia" id="categ" class="form-select">
+                            <select name="tipologia" id="tipologia" class="form-select">
                                 <option value="select">Seleziona una tipologia</option>
                                 <option value="dentista">dentista</option>
                                 <option value="oculista">oculista</option>
@@ -105,12 +100,9 @@ https://templatemo.com/tm-566-medic-care
                                 <option value="neurofisiopatologo">neurofisiopatologo</option>
                             </select>
                             <br>
-                                <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" />
+                            <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" required>
                             <br><br>
-                                <input type="time" id="oraprenotinizio" placeholder="Orario prenotazione" name="oraprenotinizio" />
-                                <input type="time" id="oraprenotfine" placeholder="Orario prenotazione" name="oraprenotfine" />
-                                <br><br>
-                            <button type="submit" class="btn btn-primary">Filtra Risultati</button>
+                            <button type="submit" class="btn btn-primary">Effettua Ricerca</button>
                         </div>
                     </form>
                 </div>
@@ -119,24 +111,23 @@ https://templatemo.com/tm-566-medic-care
         <br><br>
         <div>
             <table class="table">
-                <thead style="text-align: center;">
+                <thead>
                     <tr>
                         <th scope="col">Data</th>
                         <th scope="col">Ora</th>
                         <th scope="col">Medico</th>
                         <th scope="col">Tipologia</th>
                         <th scope="col">Costo</th>
-                        <th scope="col">Azioni</th>
+                        
                     </tr>
                 </thead>
-                <tbody style="text-align: center;">
+                <tbody>
                     <tr>
                         <td>01/06/2024</td>
                         <td>10:00</td>
                         <td>Papile</td>
                         <td>Cardiologo</td>
                         <td>50€</td>
-                        <td><a href="modificaappuntamento_admin.html"><button class="btn btn-primary">Modifica</button></a></td>
                     </tr>
                     <tr>
                         <td>10/08/2024</td>
@@ -144,7 +135,6 @@ https://templatemo.com/tm-566-medic-care
                         <td>Iannotti</td>
                         <td>Neurologo</td>
                         <td>80€</td>
-                        <td><a href="modificaappuntamento_admin.html"><button class="btn btn-primary">Modifica</button></a></td>
                     </tr>
                     <tr>
                         <td>11/12/2024</td>
@@ -152,7 +142,6 @@ https://templatemo.com/tm-566-medic-care
                         <td>Di Simone</td>
                         <td>Oculistica</td>
                         <td>50€</td>
-                        <td><a href="modificaappuntamento_admin.html"><button class="btn btn-primary">Modifica</button></a></td>
                     </tr>
                 </tbody>
             </table>
