--- a/View/visualizzastoricoesami_profilopaziente.html
+++ b/View/visualizzastoricoesami_profilopaziente.html
@@ -27,6 +27,7 @@
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
 
         <link rel="stylesheet" href="casipaziente.css">
+
         <link href="font.css" rel="stylesheet">
 <!--
 
@@ -58,41 +59,21 @@ https://templatemo.com/tm-566-medic-care
                                 <a class="nav-link" href="indexpaziente.html">Home</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="prenotaesame.html">Prenota esame</a>
+                                <a class="nav-link" href="visualizzaesami_prenotazione.html">Prenota esame</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="visualizzaesamiprenotati.html">Visualizza Esami Prenotati</a>
                             </li>
-
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#timeline">Timeline</a>
-                            </li>-->
-
                             <div class="navbar-brand d-none d-lg-block">
                                 AmbulaCare
                                 <strong class="d-block">HEALTH SPECIALISTS</strong>
                             </div>
-
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#reviews">Testimonials</a>
-                            </li>-->
-
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="#booking">Booking</a>
-                            </li>-->
-
                             <li class="nav-item">
                                 <a class="nav-link" href="visualizzastoricoesami.html">Visualizza Storico Esami</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="profilopaziente.php">Profilo Personale</a>
                             </li>
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="register.html">REGISTRATI</a>
-                            </li>-->
-                            <!--<li class="nav-item" >
-                                <a class="nav-link" href="login.html">ACCEDI</a>
-                            </li>-->
                         </ul>
                     </div>
 
@@ -105,8 +86,9 @@ https://templatemo.com/tm-566-medic-care
                 <div class="col">
                     <form action="#">
                         <div class="form-group" >
-                            <h3><label for="categ">Tipologia</label></h3>
-                            <select name="languages" id="categ" class="form-select">
+                            <h2><label for="storico">Storico Esami </label></h2>
+                            <br>
+                            <select name="tipologia" id="categ" class="form-select">
                                 <option value="select">Seleziona una tipologia</option>
                                 <option value="dentista">dentista</option>
                                 <option value="oculista">oculista</option>
@@ -117,19 +99,17 @@ https://templatemo.com/tm-566-medic-care
                                 <option value="urologo">urologo</option>
                                 <option value="neurofisiopatologo">neurofisiopatologo</option>
                             </select>
-                        </div>
                             <br>
-                                <div>
-                                    <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" required>
-                                    </input>
-                                    </div>
-                                    <br>
+                            <input type="date" id="dataprenot" placeholder="Data prenotazione" name="dataprenot" required>
+                            <br><br>
                             <button type="submit" class="btn btn-primary">Effettua Ricerca</button>
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
-        <div class="col-9" id="elenco">
+        <br><br>
+        <div>
             <table class="table">
                 <thead>
                     <tr>
@@ -148,8 +128,8 @@ https://templatemo.com/tm-566-medic-care
                         <td>Papile</td>
                         <td>Cardiologo</td>
                         <td>50€</td>
-                        <td><button class="btn btn-primary">Aggiungi Recensione</button></td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
+                        <td><button class="btn btn-primary">Aggiungi Recensione</button>
+                        <button class="btn btn-primary">Visualizza Referto</button></td>
                     </tr>
                     <tr>
                         <td>10/08/2024</td>
@@ -157,8 +137,8 @@ https://templatemo.com/tm-566-medic-care
                         <td>Iannotti</td>
                         <td>Neurologo</td>
                         <td>80€</td>
-                        <td><button class="btn btn-primary">Aggiungi Recensione</button></td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
+                        <td><button class="btn btn-primary">Aggiungi Recensione</button>
+                        <button class="btn btn-primary">Visualizza Referto</button></td>
                     </tr>
                     <tr>
                         <td>11/12/2024</td>
@@ -166,8 +146,8 @@ https://templatemo.com/tm-566-medic-care
                         <td>Di Simone</td>
                         <td>Oculistica</td>
                         <td>50€</td>
-                        <td><button class="btn btn-primary">Aggiungi Recensione</button></td>
-                        <td><button class="btn btn-primary">Visualizza Referto</button></td>
+                        <td><button class="btn btn-primary">Aggiungi Recensione</button>
+                        <button class="btn btn-primary">Visualizza Referto</button></td>
                     </tr>
                 </tbody>
             </table>
